--- a/README.Rmd
+++ b/README.Rmd
@@ -29,6 +29,14 @@ tidyverse, tidymodels).
 
 ## Installation
 
+Install from CRAN:
+
+``` r
+install.packages("dverse")
+```
+
+or get a development version from GitHub:
+
 ``` r
 # install.packages("pak")
 pak::pak("maurolepore/dverse")
