Add motivation and polish example (#7)
* Motivate and simplify example

* Polish

* Polish articles

* Polish

* Badges

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,8 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/maurolepore/dverse/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/maurolepore/dverse/actions/workflows/R-CMD-check.yaml)
 [![Codecov test coverage](https://codecov.io/gh/maurolepore/dverse/graph/badge.svg)](https://app.codecov.io/gh/maurolepore/dverse)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+[![CRAN status](https://www.r-pkg.org/badges/version/dverse)](https://CRAN.R-project.org/package=dverse)
 <!-- badges: end -->
 
 The goal of dverse is to document a universe. It creates a data frame containing
@@ -42,16 +44,66 @@ or get a development version from GitHub:
 pak::pak("maurolepore/dverse")
 ```
 
+## Motivation
+
+The [Tidyverse](https://www.tidyverse.org/) popularized the idea of a "universe
+of packages." The typical universe has a meta-package that centralizes access to
+functions and data across all its packages. For example, with `library(tidyverse)` the [tidyverse
+meta-package](https://tidyverse.tidyverse.org/) centralizes access to the
+functions in [glue](https://glue.tidyverse.org/),
+[tibble](https://tibble.tidyverse.org/), and several other packages in the
+[Tidyverse universe](https://www.tidyverse.org/).
+
+However, meta-packages typically don't centralize documentation. For example,
+the tidyverse website only shows the [documentation the tidyverse meta-package
+itself](https://tidyverse.tidyverse.org/reference/index.html) and does not show
+the [documentation for glue](https://glue.tidyverse.org/reference/index.html),
+[tibble](https://tibble.tidyverse.org/reference/index.html), and other packages
+in the Tidyverse.
+
+The [dverse](https://maurolepore.github.io/dverse/) package solves this problem.
+It creates a data frame containing the metadata associated with the
+documentation of any set of packages. This data frame can be easily used to
+generate the universe-wide reference for the meta-package website, for example
+using [pkgdown](https://pkgdown.r-lib.org/).
+
 ## Example
 
-```{r}
-# Use dverse and the universe of packages you want to document
+```{r main}
 library(dverse)
-library(tools)
-library(datasets)
+library(glue)
+library(tibble)
 
-universe <- c("datasets", "tools")
-url_template <- "https://www.rdocumentation.org/packages/{package}/versions/3.6.2/topics/{topic}.html"
+universe <- c("glue", "tibble")
 
-document_universe(universe, url_template = url_template)
+# Example URLs:
+# https://glue.tidyverse.org/reference/as_glue.html
+# https://tibble.tidyverse.org/reference/as_tibble.html
+
+url_template <- "https://{package}.tidyverse.org/reference/{topic}.html"
+
+docs <- document_universe(universe, url_template)
+docs
 ```
+
+Typically you would hide the code (`echo = FALSE`) and generate click-able links
+with `DT::datatable()` or `knitr::kable()`. For example, this code to generates
+the table under "All functions in my universe":
+
+```{r kable, eval=FALSE}
+# Picking only a few rows and columns for a short example
+pick <- docs[c("topic", "title", "package")]
+knitr::kable(head(pick, 3))
+```
+
+### All functions in my universe
+
+This is a basic, universe-wide reference generated with dverse.
+
+```{r echo=FALSE, ref.label="kable"}
+
+```
+
+For customization ideas see `?DT::datatable()`, `?knitr::kable()`, and the
+examples in the [dverse
+articles](https://maurolepore.github.io/dverse/articles).
