--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ The goal of dverse is to document a universe. It creates a data frame containing
 the metadata associated with the documentation of a collection of R packages. It
 allows for linking topic names to their corresponding documentation online.
 
-If you maintain a meta-package, dverse helps create a comprehensive reference
+If you have a meta-package, dverse helps you to create a comprehensive reference
 for its website.
 
 ## Installation
