--- a/README.Rmd
+++ b/README.Rmd
@@ -88,7 +88,7 @@ docs
 * `knitr::kable()` tunrs the URLs into clickable links.
 
 ```{r}
-knitr::kable(docs)
+knitr::kable(head(docs, 3))
 ```
 
 * `DT::datatabe()` also provides a search box. See [Get started](https://maurolepore.github.io/dverse/articles/dverse.html).
