--- a/vignettes/articles/dverse.Rmd
+++ b/vignettes/articles/dverse.Rmd
@@ -11,9 +11,9 @@ knitr::opts_chunk$set(
 
 ### Basics
 
-* `dverse::document_universe()` creates a data frame with the documentation of a
-collection of R packages. Provide a `url_template` to link each `topic` in each
-`package` with its corresponding documentation online.
+`dverse::document_universe()` creates a data frame with the documentation of a
+collection of R packages. `url_template` links each `topic` in each `package`
+with its corresponding documentation online.
 
 ```{r}
 library(glue)
@@ -29,7 +29,7 @@ docs
 You may generate a clickable table is with `knitr::kable()`.
 
 ```{r}
-knitr::kable(docs)
+knitr::kable(head(docs, 3))
 ```
 
 You may generate a clickable and searchable table with `DT::datatable()`.
@@ -40,29 +40,15 @@ DT::datatable(docs, escape = FALSE)
 
 ## Tweaks
 
-* See `?knitr::kable()` and `?kableExtra::column_spec()` for more options.
+* See `?knitr::kable()` for more options.
 
 ```{r}
-knitr::kable(
-  docs,
-  format = "html",
-  col.names = NULL,
-  escape = FALSE
-) %>%
-  kableExtra::column_spec(1, bold = TRUE) %>%
-  kableExtra::column_spec(2, width = "20em")
+knitr::kable(head(docs, 3), format = "html", col.names = NULL, escape = FALSE)
 ```
 
 * See `?DT::datatable()` for more options.
 
 ```{r}
-DT::datatable(
-  docs,
-  escape = FALSE,
-  rownames = NULL,
-  options = list(
-    # fti =  f: filter, t: table, i: information
-    dom = "fti", search = list(search = search)
-  )
-)
+options <- list(dom = "fti", search = list(search = "glue"))
+DT::datatable(docs, escape = FALSE, rownames = NULL, options = options)
 ```
