--- a/vignettes/articles/dverse.Rmd
+++ b/vignettes/articles/dverse.Rmd
@@ -9,8 +9,6 @@ knitr::opts_chunk$set(
 )
 ```
 
-### Basics
-
 `dverse::document_universe()` creates a data frame with the documentation of a
 collection of R packages. `url_template` links each `topic` in each `package`
 with its corresponding documentation online.
@@ -26,29 +24,18 @@ docs <- dverse::document_universe(packages, url_template)
 docs
 ```
 
-You may generate a clickable table is with `knitr::kable()`.
+Pick rows and columns to organize the documentation however you like (e.g. by
+`package` or `concept`).
 
 ```{r}
-knitr::kable(head(docs, 3))
+pick <- docs[c("topic", "title", "package")]
 ```
 
-You may generate a clickable and searchable table with `DT::datatable()`.
-
-```{r}
-DT::datatable(docs, escape = FALSE)
-```
-
-## Tweaks
-
-* See `?knitr::kable()` for more options.
-
-```{r}
-knitr::kable(head(docs, 3), format = "html", col.names = NULL, escape = FALSE)
-```
-
-* See `?DT::datatable()` for more options.
+You may generate a clickable table is with `knitr::kable()`, and also add a search box with `DT::datatable()`.
 
 ```{r}
 options <- list(dom = "fti", search = list(search = "glue"))
-DT::datatable(docs, escape = FALSE, rownames = NULL, options = options)
+DT::datatable(pick, escape = FALSE, rownames = NULL, options = options)
 ```
+
+See `?DT::datatable()` for more options.
