--- a/README.Rmd
+++ b/README.Rmd
@@ -69,10 +69,8 @@ using [pkgdown](https://pkgdown.r-lib.org/).
 
 ## Example
 
-* `dverse::document_universe()` creates a data frame with the documentation of a
-collection of packages.
-* `url_template` links each `{topic}` in each `{package}` with its corresponding
-documentation online.
+`document_universe()` creates a data frame with documentation metadata of one or
+more packages.
 
 ```{r}
 library(glue)
@@ -85,10 +83,10 @@ docs <- dverse::document_universe(packages, url_template)
 docs
 ```
 
-* `knitr::kable()` turns the URLs into clickable links.
+`knitr::kable()` turns the URLs into clickable links.
 
 ```{r}
 knitr::kable(head(docs, 3))
 ```
 
-* `DT::datatabe()` also provides a search box. See [Get started](https://maurolepore.github.io/dverse/articles/dverse.html).
+`DT::datatabe()` also provides a search box. See [Get started](https://maurolepore.github.io/dverse/articles/dverse.html).
