--- a/vignettes/dverse.Rmd
+++ b/vignettes/dverse.Rmd
@@ -1,5 +1,10 @@
 ---
 title: "Get started"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{dverse}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 ```{r, include = FALSE}
