--- a/vignettes/articles/dverse.Rmd
+++ b/vignettes/articles/dverse.Rmd
@@ -25,10 +25,12 @@ docs
 ```
 
 Pick rows and columns to organize the documentation however you like (e.g. by
-`package` or `concept`).
+`package` or `type`).
 
 ```{r}
-pick <- docs[c("topic", "title", "package")]
+rows <- docs$type == "help"
+cols <- c("topic", "title", "package")
+pick <- docs[rows, cols]
 ```
 
 You may generate a clickable table with `DT::datatable()`, which offers great
