--- a/vignettes/articles/dverse.Rmd
+++ b/vignettes/articles/dverse.Rmd
@@ -1,10 +1,8 @@
 ---
-title: "Get started"
-editor_options: 
-  chunk_output_type: console
+title: Get started
 ---
 
-```{r, include = FALSE}
+```{r setup, include=FALSE}
 knitr::opts_chunk$set(
   message = FALSE,
   collapse = TRUE,
@@ -12,62 +10,129 @@ knitr::opts_chunk$set(
 )
 ```
 
-`dverse::document_universe()` creates a data frame with the documentation of a
-collection of R packages. `url_template` links each `topic` in each `package`
-with its corresponding documentation online.
+This article shows how to create a global search for any collection of R
+packages, i.e. a universe. Your universe may be on CRAN, large, and popular like
+the [tidyverse](https://tidyverse.org/). But it may also be not on CRAN, small,
+company-specific or personal.
 
-```{r}
+The example here uses the 'toyverse' -- a toy universe containing the packages
+{glue} and {dplyr}.
+
+You need:
+
+* the package {dverse} to <u>d</u>ocument your uni<u>verse</u>, 
+* each package in the 'toyverse' to access the documentation metadata,
+* {DT} to create a searchable table.
+
+```{r packages}
 library(dverse)
-# Universe
-library(glue)
-library(tibble)
-# Other
-library(dplyr)
-library(DT)
 
-packages <- c("glue", "tibble")
-url_template <- "https://{package}.tidyverse.org/reference/{topic}.html"
-docs <- dverse::document_universe(packages, url_template)
+# toyverse
+library(glue)
+library(dplyr)
+
+library(DT)
+```
+
+dverse::document_universe() takes the names of the packages in the
+'toyverse', and a template pointing to each help file (topic) in each
+package.
+
+```{r docs}
+toyverse <- c("glue", "dplyr")
+# For example: https://dplyr.tidyverse.org/reference/select.html
+template <- "https://{package}.tidyverse.org/reference/{topic}.html"
+
+docs <- dverse::document_universe(toyverse, template)
 docs
 ```
 
-You may need to exclude reexported objects from other packages, which links are
-broken.
+You may need to exclude some topics, such as reexported objects from other
+packages. Because topics outside your universe yield broken links, you can
+exclude them with dverse::is_online().
 
-```{r}
+```{r online}
+docs %>% filter(!dverse::is_online(topic))
+
 online <- docs %>% filter(dverse::is_online(topic))
 ```
 
-Documentation is of multiple kinds.
+Consider the different kinds of documentation in your universe.
 
-```{r}
+```{r kinds}
 online %>% count(type, keyword)
 ```
 
-You may organize it however you like.
+You may organize the documentation however you like. For inspiration see the
+[pactaverse](https://rmi-pacta.github.io/pactaverse/articles/global-search.html),
+the toy
+['toyverse'](https://maurolepore.github.io/toyverse/articles/reference.html),
+[fgeo](https://forestgeo.github.io/fgeo/articles/siteonly/reference.html) and
+[tidymodels](https://www.tidymodels.org/find/).
 
-```{r}
+Here it makes sense to place vignettes, datasets, and public functions
+in separate tables.
+
+### Vignettes
+
+Here are all the vignettes available across packages in the 'toyverse'.
+Click on each topic to read its corresponding vignette.
+
+```{r vignettes}
 vignettes <- online %>% filter(type == "vignette")
-everything_else <- online %>% anti_join(vignettes)
-```
 
-#### Vignettes
-
-```{r}
 vignettes %>%
-  select(topic, title, package) %>%
+  distinct(topic, title, package) %>%
   datatable(escape = FALSE)
 ```
 
-#### Everything else
+#### You don't see what you expect?
 
-```{r}
-everything_else %>%
-  select(topic, title, package) %>%
-  # Showing off some options from `DT::datatable()`
-  datatable(
-    escape = FALSE,
-    rownames = NULL,
-    options = list(dom = "fti", search = list(search = "glue"))
-  )
+* This works with vignettes but not articles, so usethis::use_vignette() not
+usethis::use_article().
+
+* When you install the packages in your universe ensure to install the vignettes.
+Vignettes install by default when you install your packages from CRAN with
+`install.packages()` or pak::pak(). But if you install them from source with
+devtools::install() or remotes::install_github(), then you need `build_vignettes
+= TRUE`.
+
+### Datasets
+
+Here are all the datasets. Click on each topic to read about it.
+
+```{r datasets}
+datasets <- online %>% filter(keyword == "datasets")
+
+datasets %>%
+  distinct(topic, title, package) %>%
+  datatable(escape = FALSE)
 ```
+
+### Functions
+
+Here are all the functions, except internal ones. Click on each topic to read about it.
+
+```{r public}
+internal <- online %>% filter(keyword == "internal")
+
+public <- online %>%
+  anti_join(vignettes) %>%
+  anti_join(datasets) %>%
+  anti_join(internal)
+
+public %>%
+  distinct(topic, title, package) %>%
+  datatable(escape = FALSE)
+```
+
+### Learn More
+
+To learn more see the toy 'admiralverse'
+[meta-package](https://maurolepore.github.io/admiralverse) -- which models the
+main use case of {dverse}.
+
+You may also enjoy these videos:
+
+* Creating a meta-package for the toy 'admiralverse' ([5'](https://youtu.be/ezVpsadSF7A)).
+* Creating a website for the toy 'admiralverse' ([9'](https://youtu.be/VhmnADBDXv0)).
