--- a/README.Rmd
+++ b/README.Rmd
@@ -79,17 +79,27 @@ library(glue)
 library(tibble)
 
 demoverse <- c("glue", "tibble")
-# For example: "https://tibble.tidyverse.org/reference/enframe.html"
-template <- "https://{package}.tidyverse.org/reference/{topic}.html"
-docs <- dverse::document_universe(demoverse, template)
-
+# Example: "https://tibble.tidyverse.org/reference/as_tibble.html"
+manual <- "https://{package}.tidyverse.org/reference/{topic}.html"
+docs <- document_universe(demoverse, url_template = manual)
 docs
 ```
 
 `knitr::kable()` turns the URLs into clickable links.
 
 ```{r}
-knitr::kable(head(docs, 3))
+knitr::kable(tail(docs))
+```
+
+`url_template` can take different templates for the manual and vignettes.
+
+```{r}
+manual <- "https://tidyverse.r-universe.dev/{package}/doc/manual.html#{topic}"
+vignettes <- "https://tidyverse.r-universe.dev/articles/{package}/{topic}.html"
+docs_runiverse <- document_universe(demoverse, url_template = c(manual, vignettes))
+docs_runiverse
+
+knitr::kable(tail(docs_runiverse))
 ```
 
 `DT::datatabe()` also provides a search box. See [Get started](https://maurolepore.github.io/dverse/articles/dverse.html).
